// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeatTooltip should match snapshot when has children 1`] = `
.c0 {
  background-color: rgba(255,255,255,1);
  border: 1px solid #999999;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.12);
  position: absolute;
  max-width: 260px;
  color: #262626;
  padding: 8px;
  display: none;
  font-size: 12px;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0:before {
  content: "";
  position: absolute;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), scale 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), scale 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  display: none;
  border-right: 1px solid #999999;
  border-bottom: 1px solid #999999;
  border-top-left-radius: 100%;
  width: 12px;
  height: 12px;
  -webkit-transform: translateY(-50%) rotate(-135deg);
  -ms-transform: translateY(-50%) rotate(-135deg);
  transform: translateY(-50%) rotate(-135deg);
  background-color: rgba(255,255,255,1);
  left: calc(50% - 6px);
  top: -1px;
  -webkit-transform: translateY(-50%) rotate(-135deg);
  -ms-transform: translateY(-50%) rotate(-135deg);
  transform: translateY(-50%) rotate(-135deg);
}

.c0.open-enter,
.c0.open-enter:before {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c0.open-enter-active,
.c0.open-enter-active:before {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0.open-enter-done,
.c0.open-enter-active:before {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0.open-exit,
.c0.open-exit:before {
  display: block;
  opacity: 1;
}

.c0.open-exit {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0.open-exit-active,
.c0.open-exit-active:before {
  display: block;
  opacity: 0;
}

.c0.open-exit-active {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 16px;
  border-bottom: 1px solid #999999;
  line-height: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c2:first-child {
  text-align: left;
}

.c2:last-child {
  text-align: right;
}

.c3 {
  font-size: 14px;
  text-transform: uppercase;
  margin-bottom: 8px;
  color: #999999;
}

.c4 {
  font-size: 16px;
  font-weight: 600;
  color: #262626;
}

.c5 {
  padding: 16px;
  font-size: 14px;
  color: #262626;
}

<div
  className="c0"
  direction="bottom"
  style={
    Object {
      "padding": 0,
      "width": "260px",
    }
  }
>
  <div
    className="c1"
    size="large"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        size="large"
      >
        Sec
      </div>
      <div
        className="c4"
        size="large"
      >
        B
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        size="large"
      >
        Row
      </div>
      <div
        className="c4"
        size="large"
      >
        5
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        size="large"
      >
        Seat
      </div>
      <div
        className="c4"
        size="large"
      >
        25
      </div>
    </div>
  </div>
  <div
    className="c5"
    size="large"
  >
    <div>
      test
    </div>
  </div>
</div>
`;

exports[`SeatTooltip should match snapshot when no children and dark 1`] = `
.c0 {
  background-color: rgba(255,255,255,1);
  border: 1px solid #999999;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.12);
  position: absolute;
  max-width: 260px;
  color: #262626;
  padding: 8px;
  display: none;
  font-size: 12px;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0:before {
  content: "";
  position: absolute;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), scale 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), scale 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  display: none;
  border-right: 1px solid #999999;
  border-bottom: 1px solid #999999;
  border-top-left-radius: 100%;
  width: 12px;
  height: 12px;
  -webkit-transform: translateY(-50%) rotate(-135deg);
  -ms-transform: translateY(-50%) rotate(-135deg);
  transform: translateY(-50%) rotate(-135deg);
  background-color: rgba(255,255,255,1);
  left: calc(50% - 6px);
  top: -1px;
  -webkit-transform: translateY(-50%) rotate(-135deg);
  -ms-transform: translateY(-50%) rotate(-135deg);
  transform: translateY(-50%) rotate(-135deg);
}

.c0.open-enter,
.c0.open-enter:before {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c0.open-enter-active,
.c0.open-enter-active:before {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0.open-enter-done,
.c0.open-enter-active:before {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0.open-exit,
.c0.open-exit:before {
  display: block;
  opacity: 1;
}

.c0.open-exit {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0.open-exit-active,
.c0.open-exit-active:before {
  display: block;
  opacity: 0;
}

.c0.open-exit-active {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 16px;
  border-bottom: none;
  line-height: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c2:first-child {
  text-align: left;
}

.c2:last-child {
  text-align: right;
}

.c3 {
  font-size: 14px;
  text-transform: uppercase;
  margin-bottom: 8px;
  color: #999999;
}

.c4 {
  font-size: 16px;
  font-weight: 600;
  color: #262626;
}

<div
  className="c0"
  direction="bottom"
  style={
    Object {
      "padding": 0,
      "width": "260px",
    }
  }
>
  <div
    className="c1"
    size="large"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        size="large"
      >
        Sec
      </div>
      <div
        className="c4"
        size="large"
      >
        
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        size="large"
      >
        Row
      </div>
      <div
        className="c4"
        size="large"
      >
        5
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        size="large"
      >
        Seat
      </div>
      <div
        className="c4"
        size="large"
      >
        25
      </div>
    </div>
  </div>
</div>
`;

exports[`SeatTooltip should match snapshot when small and dark 1`] = `
.c0 {
  background-color: #1f262d;
  border: 1px solid #1f262d;
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.12);
  position: absolute;
  max-width: 260px;
  color: rgba(255,255,255,1);
  padding: 8px;
  display: none;
  font-size: 12px;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), -webkit-transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), transform 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
}

.c0:before {
  content: "";
  position: absolute;
  -webkit-transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), scale 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  transition: opacity 0.1s cubic-bezier(0.55,0.085,0.68,0.53), scale 0.1s cubic-bezier(0.55,0.085,0.68,0.53);
  display: none;
  border-top-left-radius: 100%;
  width: 12px;
  height: 12px;
  -webkit-transform: translateY(-50%) rotate(-135deg);
  -ms-transform: translateY(-50%) rotate(-135deg);
  transform: translateY(-50%) rotate(-135deg);
  background-color: #1f262d;
  left: calc(50% - 6px);
  top: -1px;
  -webkit-transform: translateY(-50%) rotate(-135deg);
  -ms-transform: translateY(-50%) rotate(-135deg);
  transform: translateY(-50%) rotate(-135deg);
}

.c0.open-enter,
.c0.open-enter:before {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 0;
}

.c0.open-enter {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c0.open-enter-active,
.c0.open-enter-active:before {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-active {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0.open-enter-done,
.c0.open-enter-active:before {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  opacity: 1;
}

.c0.open-enter-done {
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), -webkit-transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: opacity 0.3s cubic-bezier(0.455,0.03,0.515,0.955), transform 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0.open-exit,
.c0.open-exit:before {
  display: block;
  opacity: 1;
}

.c0.open-exit {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0.open-exit-active,
.c0.open-exit-active:before {
  display: block;
  opacity: 0;
}

.c0.open-exit-active {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
  border-bottom: 1px solid #999999;
  line-height: 1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c2:first-child {
  text-align: left;
}

.c2:last-child {
  text-align: right;
}

.c3 {
  font-size: 12px;
  text-transform: uppercase;
  margin-bottom: 8px;
  color: #999999;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  color: rgba(255,255,255,1);
}

.c5 {
  padding: 8px;
  font-size: 12px;
  color: rgba(255,255,255,1);
}

<div
  className="c0"
  direction="bottom"
  style={
    Object {
      "padding": 0,
      "width": "180px",
    }
  }
>
  <div
    className="c1"
    size="small"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        size="small"
      >
        Sec
      </div>
      <div
        className="c4"
        size="small"
      >
        B
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        size="small"
      >
        Row
      </div>
      <div
        className="c4"
        size="small"
      >
        5
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
        size="small"
      >
        Seat
      </div>
      <div
        className="c4"
        size="small"
      >
        25
      </div>
    </div>
  </div>
  <div
    className="c5"
    size="small"
  >
    <div>
      test
    </div>
  </div>
</div>
`;
